kube/components/aix/kubernetes/opa/aix-opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: aix
spec:
  type: NodePort
  selector:
    app: opa
  ports:
    - name: http
      port: 8181
      targetPort: 8181
      nodePort: 32181
