kube/components/aix/kubernetes/opa/aix-opa-egress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aix-opa-egress-policy
  namespace: aix
spec:
  podSelector:
    matchLabels:
      app: opa
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app: moat
      ports:
        - protocol: TCP
          port: 8000
